修复编译问题、升级jdk版本为17，升级spring boot、mybatis-plus等版本，修改代码适配升级、添加Dockerfile、删除application文件